updated all of the world/schematic code, and a bunch of other things
Signed-off-by: TimMayr <tim.mayr@gmx.at>